Fixed phone cutoff glitch

--- a/src/index.css
+++ b/src/index.css
@@ -210,5 +210,10 @@
 
 body {
   margin: 0;
-  overflow: visible;
 }
+
+html, body {
+  overflow-y: scroll;
+}
+
+
